Changes to be committed: 	new file:   images/aetherium.png 	new file:   images/azalea.png 	new file:   images/code.png 	new file:   images/matchafi.png 	new file:   images/melon.png 	new file:   images/moonsense.png 	new file:   images/nia.png 	new file:   images/nightcore.png 	new file:   images/serenity.png 	new file:   images/stellar.png 	new file:   images/streamlined.png 	new file:   images/xtorbit.png 	modified:   index.html 	new file:   styles.css

--- a/index.html
+++ b/index.html
@@ -1,1 +1,114 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>iMerciless - ModFolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <header>
+        <div class="container">
+            <h1>Welcome to My ModFolio</h1>
+            <p>Explore my past discord staffing experiences!</p>
+        </div>
+    </header>
+
+    <main class="container">
+        <div class="card">
+            <img src="images/xtorbit.png" alt="Xtorbit Lounge">
+            <div class="card-content">
+                <h2 class="card-title">Xtorbit Lounge</h2>
+                <p class="card-description">Sr. Admin | 2 Years | Server Deleted</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="images/matchafi.png" alt="MatchaFi">
+            <div class="card-content">
+                <h2 class="card-title">MatchaFi</h2>
+                <p class="card-description">Moderator | 4 Months | Server Inactive</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="images/moonsense.png" alt="Moonsense Client">
+            <div class="card-content">
+                <h2 class="card-title">Moonsense Client</h2>
+                <p class="card-description">Owner | 3 Years | Server Rebranded</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="images/serenity.png" alt="Serenity">
+            <div class="card-content">
+              <h2 class="card-title">Serenity</h2>
+              <p class="card-description">Owner | 4 Years | Current</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="images/melon.png" alt="Melon Client">
+            <div class="card-content">
+                <h2 class="card-title">Melon Client</h2>
+                <p class="card-description">Moderator | 3 Months | Server Deleted</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="images/azalea.png" alt="Azalea Client">
+            <div class="card-content">
+                <h2 class="card-title">Azalea Client</h2>
+                <p class="card-description">Admin | 1 Years | Server Inactive</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="images/nia.png" alt="nia">
+            <div class="card-content">
+                <h2 class="card-title">Nia's Lounge</h2>
+                <p class="card-description">Admin | 2 Months | Current</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="images/nightcore.png" alt="nightcore">
+            <div class="card-content">
+                <h2 class="card-title">NightCore Lounge</h2>
+                <p class="card-description">Admin | 4 Years | Server Deleted</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="images/stellar.png" alt="stellar">
+            <div class="card-content">
+                <h2 class="card-title">Stellar Client</h2>
+                <p class="card-description">Moderator | 2 Months | Current</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="images/code.png" alt="code">
+            <div class="card-content">
+                <h2 class="card-title">House Of Code</h2>
+                <p class="card-description">Moderator | 2 Months | Left Server</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="images/streamlined.png" alt="streamlined">
+            <div class="card-content">
+                <h2 class="card-title">Streamlined Client</h2>
+                <p class="card-description">Admin | 6 Months | Server Moved</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="images/aetherium.png" alt="aetherium">
+            <div class="card-content">
+                <h2 class="card-title">Aetherium Client</h2>
+                <p class="card-description">Manager | 6 Months | Resigned</p>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 iMerciless. All rights reserved.</p>
+        </div>
+    </footer>
+</body>
+
+</html>
